--- a/Digital_shop/templates/dashboard/video.html
+++ b/Digital_shop/templates/dashboard/video.html
@@ -84,8 +84,8 @@
                                     Your browser does not support the video tag.
                                 </video>
                                 <div class="mt-3">
-                                    <button id="muteButton" class="btn btn-primary">Mute</button>
-                                    <button id="fullscreenButton" class="btn btn-secondary">Fullscreen</button>
+                                    <button id="muteButton" class="btn btn-dark btn-sm">Mute</button>
+                                    <button id="fullscreenButton" class="btn btn-sm">Fullscreen</button>
                                 </div>
                             </div>
                         </div>
