--- a/Digital_shop/templates/dashboard/video.html
+++ b/Digital_shop/templates/dashboard/video.html
@@ -85,7 +85,7 @@
                                 </video>
                                 <div class="mt-3">
                                     <button id="muteButton" class="btn btn-dark btn-sm">Mute</button>
-                                    <button id="fullscreenButton" class="btn btn-sm">Fullscreen</button>
+                                    <button id="fullscreenButton" class="btn btn-dark btn-sm">Fullscreen</button>
                                 </div>
                             </div>
                         </div>
