--- a/Digital_shop/templates/sections/nav.html
+++ b/Digital_shop/templates/sections/nav.html
@@ -273,7 +273,7 @@
         </li>
 
         <!-- Grouping "My Digital Library" and "Leadership Training" under a dropdown -->
-        {% if user.is_authenticated %}
+        <!-- {% if user.is_authenticated %}
           <li class="nav-item mx-3 dropdown">
             <a class="nav-link text-white dropdown-toggle link-underline {% if request.path == '/training' or request.path == '/library' %}active{% endif %}" href="#" id="userLinksDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">My Account <i class="bi bi-chevron-down ms-2"></i></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userLinksDropdown">
@@ -291,8 +291,14 @@
               </li>
             </ul>
           </li>
-        {% endif %}
+        {% endif %} -->
 
+           <li>
+          <a class="text-muted account-dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">
+            Masterclass Courses <span class="badge bg-secondary ms-2">Coming Soon</span>
+          </a>
+        </li>
+        
         <li class="nav-item mx-3">
           <a class="nav-link text-white link-underline {% if request.path == '#contact' %}active{% endif %}" href="#contact">Contact</a>
         </li>
@@ -346,7 +352,7 @@
     <a href="{% url 'home' %}#all-products" class="nav-link text-white">All Products</a>
 
     <!-- My Account Dropdown -->
-    {% if user.is_authenticated %}
+    <!-- {% if user.is_authenticated %}
       <div class="dropdown">
         <a href="#" class="nav-link text-white dropdown-toggle" id="accountDropdown" role="button" data-bs-toggle="collapse" data-bs-target="#accountMenu" aria-expanded="false">My Account <i class="bi bi-chevron-down ms-2"></i></a>
         <div id="accountMenu" class="collapse">
@@ -358,7 +364,15 @@
           <a href="{% url 'library' %}" class="nav-link text-white ps-3">My Digital Library</a>
         </div>
       </div>
-    {% endif %}
+    {% endif %} -->
+
+
+
+        <li>
+          <a class="text-muted account-dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">
+            Masterclass Courses <span class="badge bg-secondary ms-2">Coming Soon</span>
+          </a>
+        </li>
 
     <!-- Contact Link -->
     <a href="#contact" class="nav-link text-white">Contact</a>
