Disable USD payment option in cart
Commented out the option to pay with USD using Stripe.

--- a/Digital_shop/templates/cart.html
+++ b/Digital_shop/templates/cart.html
@@ -147,7 +147,7 @@
           <!-- Set a custom width for the select input -->
           <select class="form-select form-select-sm" name="payment_method" id="paymentMethod" required style="width: 150px;">
             <option value="" disabled selected>Choose payment method</option>
-            <option value="stripe">Pay with USD</option>
+            <!-- <option value="stripe">Pay with USD</option> -->
             <option value="paystack">Pay with NGN</option>
           </select>
 
